--- a/app/views/rides/edit.html.erb
+++ b/app/views/rides/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', ride: @ride %>
 
 <%= link_to 'Show', @ride %> |
-<%= link_to 'Back', rides_path %>
+<%= link_to 'Back', root_path %>
