--- a/app/views/rides/_form.html.erb
+++ b/app/views/rides/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label :geojson %>
-    <%= form.hidden_field :geojson, id: 'ride_geojson' %>
+    <%= form.text_area :geojson, id: 'ride_geojson', disabled: true %>
   </div>
 
   <div class="field">
